# sentinel

./: .gitignore  CLAUDE.md  Cargo.toml  Plans.md  README.md  sentinel-product.md
.claude/: settings.json
.claude/cccombat/: code-review-2026-04-12-seq-1-tmux-12.1.md
.github/workflows/: build.yml
src/: analyzer.rs  collector.rs  config.rs  error.rs  main.rs  reporter.rs  threat.rs
