[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
